--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
-"scripts": {
-  "start": "node server.js"
+{
+  "name": "jeffrey-chess-academy",
+  "version": "1.0.0",
+  "description": "Jeffrey's Chess Academy website",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
